force-app/main/default/objects/FieloPLT__Model__c/FieloPLT__Model__c.object-meta.xml
<CustomObject>
    <description>A Model is a pre-configured, reusable Incentives and Programs pattern.</description>
    <label>Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>