force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Category__c</fullName>
    <description>Category which groups different types of Models.</description>
    <inlineHelpText>Choose a Category to group different types of Models.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>