force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Model readable description.</description>
    <inlineHelpText>Model readable description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>