force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__Icon__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Icon__c</fullName>
    <defaultValue>&apos;fielosf-icon-grid&apos;</defaultValue>
    <description>Model iconic representation.</description>
    <inlineHelpText>Enter the Model iconic representation.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>