force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__JSON__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__JSON__c</fullName>
    <description>Model JSON representation.</description>
    <inlineHelpText>Enter the Model JSON representation.</inlineHelpText>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>