force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__Library__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Library where the Model belongs to.</description>
    <inlineHelpText>Library where the Model belongs to.</inlineHelpText>
    <label>Library</label>
    <referenceTo>FieloPLT__Library__c</referenceTo>
    <relationshipLabel>Models</relationshipLabel>
    <relationshipName>Models</relationshipName>
    <type>Lookup</type>
</CustomField>