force-app/main/default/objects/FieloPLT__Model__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>Model type (Incentives - Promotion, Challenge - or Program).</description>
    <inlineHelpText>Choose the Model type (Incentives - Promotion, Challenge - or Program).</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Challenge</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>